Update and rename break-after.html to break-after_property.html

--- a/break-after/break-after_property.html
+++ b/break-after/break-after_property.html
@@ -13,6 +13,8 @@
         <p>Sure, go ahead, laugh...</p>
         <p  class="break-after-column">Maybe we can live without...</p>
         <p>Look. If you think this is...</p>
+
+        <p>This is a paragraph</p>
       </div>
 </body>
 </html>
